Refactor scripts to allow multiple libraries
